--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="columns-table">
-      <div class="left"></div>
-      <div class="right"></div>
+    <div id="columns-container">
+      <div class="column"></div>
+      <div class="add-column">
+        <button>+</button>
+      </div>
     </div>
     <form>
       <label for="complaint"
